--- a/BEEP/public/app/views/forms/login.html
+++ b/BEEP/public/app/views/forms/login.html
@@ -1,7 +1,7 @@
 <div class="login-box">
 
   <div class="login-logo">
-    <a href="/"><img src="/img/beep-icon-logo.svg" ng-cloak></a> 
+    <a href="/"><img src="img\7835cfc6-3d93-401c-b774-fa98a9d4f8c8-removebg-preview.png" ng-cloak></a> 
   </div>
 
 
